--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Structboost</title>
 
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/components.css">
 	<link rel="stylesheet" href="./css/grid.css">
@@ -45,7 +46,7 @@
 
 	<section class="s-hero">
 		<div class="container">
-			<div class="text">
+			<div class="text" data-aos="fade-right">
 				<h1>Front-end descomplicado e direto ao ponto!</h1>
 				<p>Aprenda a desenvolver interfaces modernas e de alta qualidade com quem está na área atuando com
 					projetos altamente renomados.</p>
@@ -54,16 +55,16 @@
 				</button>
 				<img class="arrow" src="./img/arrow-direction-button.svg" alt="flecha apontando pra um botão">
 			</div>
-			<img src="./img/ilustra-hero.svg" class="ilustra" alt="ilustração">
-			<img src="./img/ilustra-mobile.svg" class="ilustra-mobile" alt="ilustração">
+			<img src="./img/ilustra-hero.svg" class="ilustra" alt="ilustração" data-aos="fade-up" data-aos-delay="200">
+			<img src="./img/ilustra-mobile.svg" class="ilustra-mobile" alt="ilustração" data-aos="fade-up" data-aos-delay="200">
 		</div>
 	</section>
 
 	<section class="s-digital">
 		<div class="container">
-			<h3>Transformando Ideias em Realidade Digital!</h3>
+			<h3 data-aos="fade-right">Transformando Ideias em Realidade Digital!</h3>
 			<ul>
-				<li>
+				<li data-aos="fade-right">
 					<div class="item-digital">
 						<div class="icon">
 							<img src="img/icon-impacto.svg" alt="ícone de impacto">
@@ -76,7 +77,7 @@
 					</div>
 				</li>
 
-				<li>
+				<li data-aos="fade-up">
 					<div class="item-digital">
 						<div class="icon">
 							<img src="img/icon-nav.svg" alt="ícone de impacto">
@@ -89,7 +90,7 @@
 					</div>
 				</li>
 
-				<li>
+				<li data-aos="fade-left">
 					<div class="item-digital">
 						<div class="icon">
 							<img src="img/icon-performance.svg" alt="ícone de impacto">
@@ -110,19 +111,19 @@
 	<section class="s-art-front">
 		<div class="container">
 			<div class="title-text">
-				<div class="left">
+				<div class="left" data-aos="fade-right">
 					<h3>Domine a Arte da Front-end</h3>
 					<p>Prepare-se para criar interfaces incríveis e funcionais para a web com este curso completo de
 						front-end.</p>
 				</div>
-				<div class="right">
+				<div class="right" data-aos="fade-left">
 					<p>Junte-se a nós neste curso de front-end e embarque em uma jornada emocionante para se tornar um
 						desenvolvedor web altamente qualificado.</p>
 				</div>
 			</div>
 
 			<div class="all">
-				<div class="card-post">
+				<div class="card-post" data-aos="flip-left">
 					<span class="tag">Fundamentos</span>
 					<div class="image">
 						<img src="img/image-post.svg" alt="image default">
@@ -134,7 +135,7 @@
 					</div>
 				</div>
 
-				<div class="card-post">
+				<div class="card-post" data-aos="flip-left">
 					<span class="tag">Estilizando</span>
 					<div class="image">
 						<img src="img/image-post.svg" alt="image default">
@@ -146,7 +147,7 @@
 					</div>
 				</div>
 
-				<div class="card-post">
+				<div class="card-post" data-aos="flip-left">
 					<span class="tag">Potencializando</span>
 					<div class="image">
 						<img src="img/image-post.svg" alt="image default">
@@ -158,7 +159,7 @@
 					</div>
 				</div>
 
-				<div class="card-post">
+				<div class="card-post" data-aos="flip-left">
 					<span class="tag">Aplicações</span>
 					<div class="image">
 						<img src="img/image-post.svg" alt="image default">
@@ -170,7 +171,7 @@
 					</div>
 				</div>
 
-				<div class="card-post">
+				<div class="card-post" data-aos="flip-left">
 					<span class="tag">Designs</span>
 					<div class="image">
 						<img src="img/image-post.svg" alt="image default">
@@ -186,7 +187,7 @@
 	</section>
 
 	<section class="s-newsletter">
-		<div class="container">
+		<div class="container" data-aos="zoom-out">
 			<h2>
 				Front-end descomplicado e direto ao ponto!
 			</h2>
@@ -279,6 +280,15 @@
 			<p class="copy">2023 © Todos os direitos reservados. <strong>Codeboost</strong></p>
 		</div>
 	</footer>
+
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+	<script>
+		AOS.init({
+			duration: 1000,
+			disable: "mobile",
+		});
+	  </script>
 
 </body>
 
